fix building and readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,11 @@ project(parula LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(SDL2 REQUIRED)
+find_package(SDL2 CONFIG REQUIRED)
 find_package(sdl2-image CONFIG REQUIRED)
 find_package(TBB CONFIG REQUIRED)
 find_package(Boost REQUIRED)
+find_package(Threads)
 
 include_directories(${Boost_INCLUDE_DIR})
 
@@ -22,4 +23,30 @@ add_executable(parula main.cpp
 
 target_include_directories(parula PRIVATE ${PROJECT_SOURCE_DIR})
 
-target_link_libraries(parula PRIVATE SDL2::SDL2 SDL2::SDL2main TBB::tbb)
+target_link_libraries(parula PRIVATE SDL2::SDL2
+                                     SDL2::SDL2main
+                                     TBB::tbb
+                                     Threads::Threads)
+
+
+install(TARGETS parula DESTINATION bin)
+
+include(InstallRequiredSystemLibraries)
+set(CPACK_PACKAGE_VERSION_MAJOR "${parula_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${parula_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${parula_VERSION_PATCH}")
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Alexey")
+include(CPack)
+
+if (MSVC)
+    target_compile_options(
+        parula PRIVATE
+        /W4
+    )
+    add_compile_definitions(_WIN32_WINNT=0x0601)
+else ()
+    target_compile_options(
+        parula PRIVATE
+        -Wall -Wextra -pedantic -Werror
+    )
+endif()
