--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - chmod +x build_coverty.sh
   - sudo add-apt-repository ppa:mhier/libboost-latest --yes
   - sudo apt-get update
-  - sudo apt-get install libboost1.70-dev libsdl2-dev libsdl2-image-dev libtbb-dev
+  - sudo apt-get install libboost1.70-dev libsdl2-dev libtbb-dev
   - echo -n | openssl s_client -connect https://scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
 
 addons:
