--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,11 +16,10 @@ before_build:
       git pull > nul &
       .\bootstrap-vcpkg.bat -disableMetrics &
       vcpkg install sdl2:"%platform%"-windows &
-      vcpkg install sdl2-image:"%platform%"-windows &
       vcpkg install tbb:"%platform%"-windows &
       cd %APPVEYOR_BUILD_FOLDER%
     )
-  - cmake -G "Visual Studio 16 2019" -DBOOST_ROOT=C:\Libraries\boost_1_71_0 .
+  - cmake -G "Visual Studio 16 2019" -DBOOST_ROOT=C:\Libraries\boost_1_71_0 -DCMAKE_TOOLCHAIN_FILE:INTERNAL=C:\Tools\vcpkg\scripts\buildsystems\vcpkg.cmake .
 
 build:
   project: $(APPVEYOR_BUILD_FOLDER)\parula.sln
