--- a/bintray.json.in
+++ b/bintray.json.in
@@ -1,7 +1,7 @@
 {
   "package": {
     "name": "Builds",
-    "repo": "parula",
+    "repo": "PARULA",
     "subject": "alexeyya",
     "desc": "I was pushed completely automatically",
     "website_url": "www.jfrog.com",
