--- a/.travis.yml
+++ b/.travis.yml
@@ -7,19 +7,14 @@ before_install:
   - chmod +x build.sh
   - chmod +x build_coverty.sh
   - sudo add-apt-repository ppa:mhier/libboost-latest --yes
+  - sudo apt-get update
+  - sudo apt-get install libboost1.70-dev doxygen doxygen-doc doxygen-latex doxygen-gui graphviz libsdl2-dev
   - echo "deb http://cz.archive.ubuntu.com/ubuntu focal main universe" | sudo tee -a  /etc/apt/sources.list
   - sudo apt-get update
-  - sudo apt-get install libboost1.70-dev libsdl2-dev libtbb-dev
+  - sudo apt-get install libtbb-dev
   - echo -n | openssl s_client -connect https://scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
 
 addons:
-  apt:
-      packages:
-        - doxygen
-        - doxygen-doc
-        - doxygen-latex
-        - doxygen-gui
-        - graphviz
   coverity_scan:
       project:
         name: "AlexeyYa/parula"
