--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ include(InstallRequiredSystemLibraries)
 set(CPACK_PACKAGE_VERSION_MAJOR "${parula_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${parula_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${parula_VERSION_PATCH}")
-set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Alexey")
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "AlexeyYa")
 include(CPack)
 
 if (MSVC)
