--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ addons:
         name: "AlexeyYa/parula"
         description: "PARULA coverity"
       notification_email: l337.cat@gmail.com
+      build_command_prepend: "cov-configure --xml-option=skip_file:"/usr/.*""
       build_command: "./build_coverty.sh"
       branch_pattern: master
 
@@ -38,5 +39,4 @@ deploy:
     local_dir: ./doc/html
     keep_history: true
     on:
-      branch: master
-    
+      branch: master    
