--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ addons:
         name: "AlexeyYa/parula"
         description: "PARULA coverity"
       notification_email: l337.cat@gmail.com
-      build_command_prepend: "cov-configure --xml-option=skip_file:\"/usr/.*\""
+      build_command_prepend: "cov-configure --comptype gcc --compiler gcc-7.4.0 -- template --xml-option=skip_file:\"/usr/.*\""
       build_command: "./build_coverty.sh"
       branch_pattern: master
 
