--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - chmod +x build_coverty.sh
   - sudo add-apt-repository ppa:mhier/libboost-latest --yes
   - sudo apt-get update
-  - sudo apt-get install libboost1.70-dev doxygen doxygen-doc doxygen-latex doxygen-gui graphviz libsdl2-dev libopenblas-dev
+  - sudo apt-get install libboost1.70-dev doxygen doxygen-doc doxygen-latex doxygen-gui graphviz libsdl2-dev
   - echo "deb http://cz.archive.ubuntu.com/ubuntu focal main universe" | sudo tee -a  /etc/apt/sources.list
   - sudo apt-get update
   - sudo apt-get install libtbb-dev
