--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,18 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install libtbb-dev libdlib-dev
   - echo -n | openssl s_client -connect https://scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
+  - wget http://dlib.net/files/dlib-19.20.tar.bz2
+  - tar xvf dlib-19.20.tar.bz2
+  - cd dlib-19.20/
+  - mkdir build
+  - cd build
+  - cmake ..
+  - cmake --build . --config Release
+  - sudo make install
+  - sudo ldconfig
+  - cd ..
+  - cd ..
+  - pkg-config --libs --cflags dlib-1
 
 addons:
   coverity_scan:
